--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -20,28 +20,8 @@
 
 <body>
 	<div class="container">
-		<h1>My HCI Friends</h1>
-
-		{{#each friends}}
-		<div class="friends">
-			<img src="{{imageURL}}" class="img-responsive img-rounded">
-			<h3><a href="#">{{name}}</a></h3>
-			<p>{{description}}<p>
-		</div>
-		{{/each}}
-
-		<form id="addFriendForm" role="form" method="get" action="/add">
-			<h3>Add a friend</h3>
-		    <div class="form-group">
-		      <label for="name">Name:</label>
-		      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-		    </div>
-		    <div class="form-group">
-		      <label for="description">Description:</label>
-		      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-		    </div>
-		    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-		</form>
+		<h1>Friend Added!</h1>
+    <a href="/">Return to Previous Page</a>
 
 		<script src="./js/jquery-1.11.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
